# houston-tools

./: .gitignore  Cargo.toml  README.md  clippy.toml  rustfmt.toml
azur_lane/: Cargo.toml
azur_lane/src/: equip.rs  juustagram.rs  lib.rs  secretary.rs  ship.rs  skill.rs
azur_lane_data_collector/: Cargo.toml  build.rs
azur_lane_data_collector/_cmbk/: image.rs
azur_lane_data_collector/assets/: config.json  empty-config.json  lua_init.lua
azur_lane_data_collector/src/: convert_al.rs  intl_util.rs  main.rs  model.rs
azur_lane_data_collector/src/enhance/: blueprint.rs  meta.rs  mod.rs  retrofit.rs
azur_lane_data_collector/src/log/: buf.rs  mod.rs  write.rs
azur_lane_data_collector/src/parse/: augment.rs  fleet_tech.rs  image.rs  mod.rs  secretary.rs  ship.rs  skill.rs  skin.rs
houston_app/: Cargo.toml  build.rs
houston_app/assets/: README.md  default_config.toml
houston_app/l10n/: starboard.ftl
houston_app/migrations/: 2.15.1-starboard.messages.js  README.md
houston_app/src/: build.rs  config.rs  main.rs  poise_command_builder.rs  prelude.rs
houston_app/src/buttons/: context.rs  custom_data.rs  encoding.rs  mod.rs  nav.rs  private.rs  test.rs  tests.rs
houston_app/src/buttons/azur/: augment.rs  equip.rs  lines.rs  mod.rs  search_augment.rs  search_equip.rs  search_ship.rs  shadow_equip.rs  ship.rs  skill.rs
houston_app/src/buttons/common/: none.rs
houston_app/src/config/: azur_lane.rs  emoji.rs  mod.rs  setup.rs  token_parse.rs
houston_app/src/data/: app_emojis.rs  azur.rs  cache.rs  mod.rs
houston_app/src/data/cache/: event_handler.rs  mod.rs  model.rs
houston_app/src/data/db/: mod.rs
houston_app/src/events/: starboard.rs
houston_app/src/fmt/: discord.rs  join.rs  l10n.rs  log.rs  mod.rs  time.rs
houston_app/src/fmt/azur/: equip.rs  weapon.rs
houston_app/src/helper/: bson.rs  discord.rs  future.rs  futures.rs  index_extract_map.rs  mod.rs  poise_command_builder.rs  sync.rs  time.rs
houston_app/src/helper/bson/: mod.rs  models.rs  serde.rs
houston_app/src/helper/discord/: components.rs  events.rs  mod.rs
houston_app/src/helper/futures/: boxed_join.rs  mod.rs  timeout.rs
houston_app/src/helper/time/: mod.rs  serde.rs
houston_app/src/logging/: default_appender.rs  default_pattern.rs  mod.rs  target_filter.rs  webhook_appender.rs
houston_app/src/modules/: mod.rs
houston_app/src/modules/azur/: config.rs  data.rs  mod.rs
houston_app/src/modules/core/: mod.rs
houston_app/src/modules/media_react/: config.rs  mod.rs
houston_app/src/modules/minigame/: mod.rs  slashies.rs
houston_app/src/modules/perks/: config.rs  day_of_year.rs  items.rs  mod.rs  model.rs
houston_app/src/modules/profile/: mod.rs  slashies.rs
houston_app/src/modules/rep/: config.rs  mod.rs  model.rs  slashies.rs
houston_app/src/modules/self_role/: config.rs  mod.rs  slashies.rs
houston_app/src/modules/snipe/: config.rs  mod.rs  slashies.rs  state.rs
houston_app/src/modules/starboard/: config.rs  mod.rs  model.rs  slashies.rs
houston_app/src/slashies/: coin.rs  config.rs  dice.rs  mod.rs  timestamp.rs  upload.rs  who.rs
houston_app/src/slashies/args/: mod.rs  slash_user.rs
houston_app/src/slashies/azur/: autocomplete.rs  choices.rs  find.rs  mod.rs
houston_app/src/slashies/calc/: mod.rs  ops.rs  parse.rs
houston_cmd/: Cargo.toml
houston_cmd/macros/: Cargo.toml
houston_cmd/macros/src/: any_command_impl.rs  args.rs  choice_arg_impl.rs  lib.rs  util.rs
houston_cmd/macros/src/chat_command_impl/: command_emit.rs  group_emit.rs  mod.rs
houston_cmd/macros/src/context_command_impl/: mod.rs
houston_cmd/src/: context.rs  error.rs  framework.rs  lib.rs  macros.rs  model.rs  private.rs
houston_cmd/src/args/: impls.rs  mod.rs
houston_cmd/src/reply/: builder.rs  create.rs  edit.rs  handle.rs  mod.rs
libs/azur_lane/: Cargo.toml
libs/azur_lane/src/: data_def.rs  equip.rs  juustagram.rs  lib.rs  secretary.rs  ship.rs  skill.rs  skin.rs
libs/azur_lane/src/private/: mod.rs  thin_bmap.rs
libs/bson_model/: Cargo.toml
libs/bson_model/macros/: Cargo.toml
libs/bson_model/macros/src/: args.rs  derive_model_document.rs  lib.rs  model_impl.rs
libs/bson_model/src/: filter.rs  lib.rs  model.rs  multi.rs  private.rs  sort.rs  update.rs
libs/bson_model/tests/: doc_format.rs
libs/houston_btn/: Cargo.toml
libs/houston_btn/src/: context.rs  encoding.rs  lib.rs  nav.rs  private.rs  tests.rs
libs/houston_cmd/: Cargo.toml
libs/houston_cmd/macros/: Cargo.toml
libs/houston_cmd/src/: context.rs  error.rs  framework.rs  lib.rs  macros.rs  model.rs  private.rs
libs/houston_cmd/tests/: message_context.rs  top_level.rs  user_context.rs
libs/houston_utils/: Cargo.toml
libs/houston_utils/discord_components/: Cargo.toml
libs/houston_utils/src/: index_extract_map.rs  join.rs  lib.rs  set.rs  str.rs
libs/serde_steph/: Cargo.toml
libs/serde_steph/src/: compat.rs  de.rs  error.rs  leb128.rs  lib.rs  read.rs  ser.rs  tests.rs
libs/unity_read/: Cargo.toml
libs/unity_read/src/: error.rs  lib.rs  object.rs  serialized_file.rs  unity_fs.rs  unity_fs_common_str.rs
libs/unity_read/tests/: texture2d_decode.rs  unpack_unityfs.rs
libs/utils/: Cargo.toml
libs/utils/benches/: fuzzy.rs  fuzzy_names.txt  str_as_data.rs  truncate.rs
libs/utils/src/: fuzzy.rs  lib.rs  mem.rs  range.rs
unity_read/: Cargo.toml
unity_read/src/: __private.rs  error.rs  lib.rs  object.rs  serialized_file.rs  unity_fs.rs
unity_read/src/classes/: class_id.rs  mesh.rs  mod.rs  streaming_info.rs  texture2d.rs
unity_read/tests/assets/: README.md
utils/: Cargo.toml
utils/benches/: fuzzy.rs  str_as_data.rs  truncate.rs
utils/src/: fields.rs  fuzzy.rs  lib.rs  mem.rs  range.rs  str_as_data.rs  time.rs
utils/src/iter/: mod.rs  vec_chunks.rs
utils/src/private/: cell.rs  hash.rs  mod.rs  ptr.rs  str.rs
utils/src/str_as_data/: b20bit.rs  b256.rs  b65536.rs  mod.rs  test.rs  tests.rs
utils/src/term/: mod.rs  style.rs
utils/src/text/: __private.rs  escape.rs  inline_str.rs  mod.rs  private.rs  titlecase_impl.rs  truncate_impl.rs  write_str.rs
(+182 files in other folders)
