[package]
name = "azur_lane"
version = "1.6.1"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
bitflags = { version = "2.6.0", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }

utils = { path = "../utils" }
