[package]
name = "azur_lane"
version = "1.9.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
bitflags = { version = "2.6.0", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }

utils = { path = "../utils" }
