[package]
name = "azur_lane_data_collector"
version = "2.1.2"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.winresource]
FileDescription = "Houston Tools Azur Lane Data Collector"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.95"
humantime = "2.1.0"
image = { version = "0.25.5", default-features = false, features = ["webp"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

azur_lane = { path = "../azur_lane" }
unity_read = { path = "../unity_read" }
utils = { path = "../utils" }

[dependencies.clap]
version = "4.5.25"
features = ["std", "help", "usage", "error-context", "suggestions", "derive"]
default-features = false

[dependencies.mlua]
version = "0.10.2"
features = ["lua54", "vendored", "send", "serialize"]

[build-dependencies]
utils_build = { path = "../utils_build" }
