[package]
name = "azur_lane_data_collector"
version = "2.7.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.winresource]
FileDescription = "Houston Tools Azur Lane Data Collector"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.97"
humantime = "2.3.0"
image = { version = "0.25.6", default-features = false, features = ["webp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
small-fixed-array = { version = "0.4.8", features = ["serde"] }

azur_lane = { path = "../libs/azur_lane" }
unity_read = { path = "../libs/unity_read" }
utils = { path = "../libs/utils" }

[dependencies.clap]
version = "4.5.35"
features = ["std", "help", "usage", "error-context", "suggestions", "derive"]
default-features = false

[dependencies.mlua]
version = "0.11.4"
features = ["lua54", "vendored", "error-send", "serialize"]

[build-dependencies]
utils_build = { path = "../libs/utils_build" }
