[package]
name = "houston_app"
version = "2.11.1"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.winresource]
FileDescription = "Houston Tools Discord Bot"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.95"
arc-swap = "1.7.1"
arrayvec = "0.7.6"
base64 = "0.22.1"
bitflags = "2.8.0"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
bytes = "1.10.0"
chrono = { version = "0.4.39", default-features = false }
dashmap = "6.1.0"
extract_map = "0.2.0"
indexmap = { version = "2.7.1", features = ["serde"] }
log = { version = "0.4.25", features = ["serde"] }
mongodb = "3.2.1"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
smallvec = { version = "1.14.0", features = ["const_generics", "const_new", "union", "serde", "write"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.20"
to-arraystring = "0.2.2"
url = "2.5.4"
urlencoding = "2.1.3"

azur_lane = { path = "../libs/azur_lane" }
bson_model = { path = "../libs/bson_model" }
houston_cmd = { path = "../libs/houston_cmd" }
serde_steph = { path = "../libs/serde_steph" }
utils = { path = "../libs/utils" }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch = "next"
default-features = false
features = [
    "rustls_backend",
    "builder", "chrono", "framework", "gateway", "model", "http", "utils"
]

[dependencies.log4rs]
version = "1.3.0"
default-features = false
features = [
    "config_parsing",
    "rolling_file_appender", "compound_policy", "delete_roller", "fixed_window_roller", "size_trigger",
    "pattern_encoder",
    "threshold_filter",
    "chrono",
]

[build-dependencies]
utils_build = { path = "../libs/utils_build" }
