[package]
name = "houston_app"
version = "2.17.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.winresource]
FileDescription = "Houston Tools Discord Bot"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.97"
arc-swap = "1.9.0"
arrayvec = "0.7.6"
base64 = "0.22.1"
bitflags = "2.11.0"
bson = { version = "3.1.0", features = ["time-0_3", "serde", "serde_with-3"] }
bytes = "1.11.0"
const-builder = "0.1.4"
dashmap = "6.1.0"
extract_map = "0.3.1"
indexmap = { version = "2.14.0", features = ["serde"] }
log = "0.4.27"
lru = { version = "0.18.0", default-features = false }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.16.0", features = ["std"], default-features = false }
smallvec = { version = "1.15.0", features = ["const_generics", "const_new", "union", "serde", "write"] }
thiserror = "2.0.12"
time = { version = "0.3.47", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
toml = "1.1.2"
to-arraystring = "0.2.2"
url = "2.5.4"
urlencoding = "2.1.3"

azur_lane.path = "../libs/azur_lane"
bson_model.path = "../libs/bson_model"
houston_btn.path = "../libs/houston_btn"
houston_cmd.path = "../libs/houston_cmd"
utils.path = "../libs/utils"

openssl = { version = "0.10", optional = true }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch = "next"
default-features = false
features = [
    "native_tls_backend",
    "builder", "framework", "gateway", "model", "http", "utils"
]

[dependencies.mongodb]
version = "3.6.0"
default-features = false
features = [
    "compat-3-3-0", "bson-3",
    "dns-resolver", "openssl-tls",
]

[dependencies.log4rs]
version = "1.4.0"
default-features = false
features = [
    "config_parsing",
    "rolling_file_appender", "compound_policy", "delete_roller", "fixed_window_roller", "size_trigger",
    "pattern_encoder",
    "threshold_filter",
]

[build-dependencies]
utils_build.path = "../libs/utils_build"

[features]
openssl-vendored = ["openssl/vendored"]
