[package]
name = "houston_cmd"
version = "1.3.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.95"
log = { version = "0.4.22", features = ["serde"] }
serde = "1.0.217"
thiserror = "2.0.10"

houston_cmd_macros = { path = "./macros" }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch = "next"
default-features = false
features = [
    "builder", "framework", "gateway", "model", "http", "utils"
]
