[package]
name = "unity_read"
version = "4.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
anyhow = "1.0.93"
binrw = "0.14.1"
bytemuck = "1.19.0"
half = "2.4.1"
image = { version = "0.25.5", default-features = false }
modular-bitfield = "0.11.2"
num_enum = "0.7.3"
lz4 = "1.28.0"
lzma-rs = "0.3.0"
once_cell = { version = "1.20.2", default-features = false }
texture2ddecoder = "0.1.1"
thiserror = "2.0.3"
