[package]
name = "utils"
version = "5.1.0-beta.2"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
anstyle-query = "1.1.2"
arrayvec = "0.7.6"
chrono = { version = "0.4.38", default-features = false, features = ["now"] }
smallvec = { version = "1.13.2", features = ["const_generics", "union"] }
thiserror = "2.0.3"

[dev-dependencies]
criterion = "0.5.1"
smallvec = { version = "1.13.2", features = ["const_generics", "union", "write"] }

[[bench]]
name = "fuzzy"
harness = false

[[bench]]
name = "str_as_data"
harness = false

[[bench]]
name = "truncate"
harness = false
