[package]
name = "azur_lane"
version = "2.0.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
bitflags = { version = "2.9.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
small-fixed-array = { version = "0.4.8", features = ["serde"] }

utils = { path = "../utils" }
