[package]
name = "bson_model"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bson = { version = "3.0.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_with = { version = "3.14.0", default-features = false }
small-fixed-array = { version = "0.4.10", features = ["serde"] }

bson_model_macros = { path = "./macros" }
