[package]
name = "houston_cmd"
version = "1.6.1"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.97"
log = { version = "0.4.27", features = ["serde"] }
serde = "1.0.219"
thiserror = "2.0.12"

houston_cmd_macros = { path = "./macros" }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch = "next"
default-features = false
features = [
    "builder", "framework", "gateway", "model", "http", "utils"
]
