[package]
name = "houston_cmd"
version = "2.0.2"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.97"
const-builder = "0.1.4"
log = "0.4.27"
serde = "1.0.219"
thiserror = "2.0.12"

houston_cmd_macros.path = "./macros"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch = "next"
default-features = false
features = [
    "builder", "framework", "gateway", "model", "http", "utils"
]

[dev-dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch = "next"
default-features = false
features = [
    "builder", "framework", "gateway", "model", "http", "utils", "rustls_backend"
]
