[package]
name = "houston_utils"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.97"
arrayvec = "0.7.6"
bson = { version = "3.0.0", features = ["chrono-0_4", "serde", "serde_with-3"] }
chrono = { version = "0.4.41", default-features = false }
extract_map = "0.3.1"
indexmap = { version = "2.11.0", features = ["serde"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = { version = "3.14.0", features = ["std"], default-features = false }
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"

houston_cmd = { path = "../houston_cmd" }
utils = { path = "../utils" }

houston_utils_discord_components = { path = "./discord_components" }

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch = "next"
default-features = false
features = [
    "builder", "chrono", "framework", "gateway", "model", "http", "utils"
]

[dependencies.mongodb]
version = "3.3.0"
default-features = false
features = [
    "compat-3-3-0", "bson-3",
    "dns-resolver", "rustls-tls",
]

[dependencies.log4rs]
version = "1.4.0"
default-features = false
features = [
    "config_parsing",
    "rolling_file_appender", "compound_policy", "delete_roller", "fixed_window_roller", "size_trigger",
    "pattern_encoder",
    "threshold_filter",
    "chrono",
]

[dev-dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch = "next"
default-features = false
features = [
    "rustls_backend",
    "builder", "chrono", "framework", "gateway", "model", "http", "utils"
]
