[package]
name = "serde_steph"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = "1.0.217"
thiserror = "2.0.11"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
indexmap = { version = "2.7.1", features = ["serde"] }

[lints]
workspace = true
