[package]
name = "serde_steph"
version = "1.0.4"
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = "1.0.219"
thiserror = "2.0.12"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
indexmap = { version = "2.11.0", features = ["serde"] }

[lints]
workspace = true
