[package]
name = "serde_steph"
version = "1.0.4"
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde_core = "1.0.228"
thiserror = "2.0.12"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
indexmap = { version = "2.11.0", features = ["serde"] }

[lints]
workspace = true
