[package]
name = "unity_read"
version = "5.0.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
anyhow = "1.0.97"
binrw = "0.15.0"
bytemuck = "1.23.0"
half = "2.6.0"
image = { version = "0.25.6", default-features = false }
modular-bitfield = "0.12.0"
num_enum = "0.7.3"
lz4 = "1.28.1"
lzma-rs = "0.3.0"
once_cell = { version = "1.21.3", default-features = false }
texture2ddecoder = "0.1.2"
thiserror = "2.0.12"
