[package]
name = "unity_read"
version = "6.0.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
anyhow = "1.0.97"
binrw = "0.15.2"
modular-bitfield = "0.13.0"
num_enum = "0.7.5"
lz4 = "1.28.1"
lzma-rs = "0.3.0"
thiserror = "2.0.12"
