[package]
name = "utils"
version = "7.2.1"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
anstyle-query = "1.1.2"
arrayvec = "0.7.6"
smallvec = { version = "1.15.0", features = ["const_generics", "union"] }
thiserror = "2.0.12"

[dev-dependencies]
criterion = "0.5.1"
smallvec = { version = "1.15.0", features = ["const_generics", "union", "write"] }

[[bench]]
name = "fuzzy"
harness = false

[[bench]]
name = "str_as_data"
harness = false

[[bench]]
name = "truncate"
harness = false
