[package]
name = "utils"
version = "8.3.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
anstyle-query = "1.1.2"
smallvec = { version = "1.15.0", features = ["const_generics", "union"] }
thiserror = "2.0.12"

[dev-dependencies]
criterion = "0.7.0"
smallvec = { version = "1.15.0", features = ["const_generics", "union", "write"] }

[[bench]]
name = "fuzzy"
harness = false

[[bench]]
name = "str_as_data"
harness = false

[[bench]]
name = "truncate"
harness = false
