[package]
name = "houston_utils_discord_components"
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[dependencies]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch = "next"
default-features = false
features = [
    "builder", "chrono", "framework", "gateway", "model", "http", "utils"
]

[dev-dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
branch = "next"
default-features = false
features = [
    "rustls_backend",
    "builder", "framework", "gateway", "model", "http", "utils",
]
