[package]
name = "unity_read_mesh"
version = "6.0.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
binrw = "0.15.1"
half = "2.6.0"

unity_read.path = "../.."
