[package]
name = "unity_read_texture2d"
version = "6.0.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
bytemuck = { version = "1.23.0" }
image = { version = "0.25.10", default-features = false }
num_enum = "0.7.5"
texture2ddecoder = { version = "0.1.2" }

unity_read.path = "../.."
